tests/rosetta/out/Zig/binary-digits.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenbinary-digits1708829845/001/prog.zig:27:42: error: expected type 'i32', found 'usize'
/tmp/TestMochiZigGoldenbinary-digits1708829845/001/prog.zig:27:42: note: signed 32-bit int cannot represent all possible unsigned 64-bit values
/tmp/TestMochiZigGoldenbinary-digits1708829845/001/prog.zig:12:13: note: parameter type declared here
